<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:gravity="top"
    android:orientation="vertical"
    android:background="#000000"
    >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:textColor="#ffffff"
        android:textSize="16sp"
        android:text="@string/help"
        />

    <Button
        android:id="@+id/ButtonRecord"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:onClick="recordSpeech"
        android:text="@string/recordButton"
        android:textColor="#ffffff"
        android:background="#a5a5a5"
        />

    <TextView
        android:id="@+id/TextSaid"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:lines="5"
        android:text="@string/text"
        android:textSize="18sp"
        android:textColor="#ffffff"/>

    <Button
        android:id="@+id/ButtonRead"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:onClick="readText"
        android:text="@string/readTextButton"
        android:textColor="#ffffff"
        android:background="#a5a5a5" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center_horizontal"
        android:textSize="16sp"
        android:textColor="#ffffff"
        android:text="@string/tryHelp"/>

    <EditText
        android:id="@+id/editTextField"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:inputType="textCapSentences"
        android:background="#ffffff"/>
</LinearLayout>

